Specify -r for randdevice which is set in config file.

--- a/dnssec-tools.conf
+++ b/dnssec-tools.conf
@@ -12,3 +12,5 @@ KEY_LEN=2048				# Key size, in bits:	RSA:		[512..4096]
 					#			DH:		[128..4096]
 					#			DSA:		[512..1024] and divisible by 64
 					#			HMAC-MD5:	[1..512]
+
+RANDDEV=/dev/urandom
